--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -178,7 +178,16 @@
                     </p>
                     <button id="refresh-stats-btn" data-i18n="refresh">Refresh</button>
 
-                    <div id="app-version">v1.0.0</div>
+                    <div class="sidebar-bottom">
+                        <div class="sponsor-display">
+                            <p data-i18n="sponsoredBy"></p>
+                            <div class="sponsor-images">
+                                <img class="sponsor-logo" src="assets/sponsors/palfinger.png" alt="Palfinger">
+                                <img class="sponsor-logo" src="assets/sponsors/minew.webp" alt="Minew">
+                            </div>
+                        </div>
+                        <div id="app-version">v1.0.0</div>
+                    </div>
                 </div>
             </aside>
         </div>
