db: only store project data; clear cache btn, auth for static api

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -52,7 +52,8 @@
 
                         <div class="form-group">
                             <p id="restart-server-info" data-i18n="restartServerInfo" class="error-text hidden">Please restart the server for changes to take effect.</p>
-                            <button id="generate-qr-btn" data-i18n="generateQR" class="ml-auto">Generate QR codes</button>
+                            <button id="clear-cache-btn" data-i18n="clearCache" class="ml-auto">Clear project cache</button>
+                            <button id="generate-qr-btn" data-i18n="generateQR">Generate QR codes</button>
                         </div>
                     </div>
 
@@ -269,9 +270,9 @@
                                 <span data-i18n="qrCodeMDNS">mDNS address</span>
                                 <span id="mdns-url"></span>
                             </button>
-                            <button id="qr-btn-hostname">
+                            <button id="qr-btn-hostname" data-i18n-title="hostnameMDNSInfo">
                                 <span data-i18n="qrCodeHostname">OS Hostname mDNS</span>
-                                <span id="hostname-mdns-url">meoww</span>
+                                <span id="hostname-mdns-url"></span>
                             </button>
                         </div>
                     </div>
